Change installation directory of translations
Translation files (.mo) for applications like enigma2 should be placed inside /usr/share/locale/...
Also "el" translation should be used only for Greece and "en" only for the United Kingdom.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -6,12 +6,13 @@ msgstr ""
 "PO-Revision-Date: \n"
 "Last-Translator: satdreamgr\n"
 "Language-Team: \n"
-"Language: en\n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.7\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.0.1\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 
 #, fuzzy
 msgid ""
